Added tags_on_failure
Signed-off-by: Asif Sohail Mohammed <nsifmoh@amazon.com>